--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,3 +1,5 @@
+/* NOT IN any use as of now but will help in registration form */
+
 @media (min-width: 1025px) {
     .h-custom {
       height: 100vh !important;
