The navbar colour change and matched with the theme of landing page

--- a/DashBoard/style.css
+++ b/DashBoard/style.css
@@ -288,7 +288,7 @@ body {
 -------------------------------- */
 
 .navbar {
-	background-color: #7b4dfc !important;
+	background-color: #6732ff !important;
 	border: none !important;
 }
 .navbar .dropdown-menu {
